--- a/resources/views/content/Theme.twig
+++ b/resources/views/content/Theme.twig
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/main.css">
+<link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/resources/css/main.css">
