--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -2,6 +2,7 @@
 body {
     background-color: #808080;
 }
+/*
 a {
     color: #e878aa;
 }
@@ -26,3 +27,4 @@ a {
 .wrapper-main .navbar .navbar-nav .nav-item>.nav-link {
     border: none;
 }
+*/
