--- a/resources/views/CeresSadingo.twig
+++ b/resources/views/CeresSadingo.twig
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/main.css">
+<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
