--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -9,7 +9,7 @@ a {
 }
 /*Text größe Artikelübersicht Breadcrumb*/
 .basket-preview .totals, .btn-labeled, .small, small {
-  font-size: 100%;
+  font-size: 100% !important;
 }
 /***** Userbar (oben) *****/
 .controls-list a {
