Anpassungen an der Startseite

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -1,6 +1,7 @@
 {% extends 'Ceres::Homepage.Homepage' %}
+
 {% block PageBody %}
 
-    <!-- Insert markup for the basket here -->
- 
+  <p>Dies ist die Startseite</p>
+
 {% endblock %}
