--- a/resources/views/CeresSadingo.twig
+++ b/resources/views/CeresSadingo.twig
@@ -1,2 +1,6 @@
+<!-- Eigenes Design -->
 <link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/main.css">
+<!-- Schriftart -->
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+<!-- Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
