--- a/resources/views/CeresSadingo.twig
+++ b/resources/views/CeresSadingo.twig
@@ -3,4 +3,4 @@
 <!-- Schriftart -->
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 <!-- Bootstrap -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" >
+<link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/bootstrap/bootstrap.min.css">
