--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -3,6 +3,6 @@
 {% block ThemeHomepage %}
 
   <p>Dies ist die Startseite</p>
-  <button type="button" class="btn btn-default">Default</button>
-  
+  <button type="button" class="btn btn-primary">Primary</button>
+
 {% endblock %}
