--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -2,7 +2,7 @@
 
 {% block ThemeHomepage %}
 
-  <div class="container">
+  <div class="container-max page-content">
   <h3>Startseite</h3>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
