Slider Design Anpassung

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -2,8 +2,7 @@
 
 {% block ThemeHomepage %}
 
-  <div class="container-max page-content">
-  <h3>Startseite</h3>
+  <div class="main_container_slider container-max page-content">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
