--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -128,6 +128,13 @@ a {
 .availability_1, .availability_2{
   background-color: #00c174;
 }
+
+/*****Startseite Slider*****/
+.main_container_slider{
+  padding: 0 !important;
+  margin-top: -14px;
+}
+
 /***** Footer *****/
 .footer {
    background-color: #555860;
