Slider css datei hinzugefügt

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -1,5 +1,7 @@
 {% extends 'Ceres::Homepage.Homepage' %}
 
+<link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/slider.css">
+
 {% block ThemeHomepage %}
 
   <div class="main_container_slider container-max page-content">
