Slider Css verschoben

--- a/resources/views/CeresSadingo.twig
+++ b/resources/views/CeresSadingo.twig
@@ -2,3 +2,4 @@
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 <!-- Eigenes Design -->
 <link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/main.css">
+<link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/slider.css">
