--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -30,9 +30,31 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <div class="main_container_pagecontent container-max page-content">
+    <div class="main_pagecontent">
     </div>
   </div>
   </div>
+
+  <div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 2
+    </div>
+    <div class="col">
+      1 of 2
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      1 of 3
+    </div>
+  </div>
+</div>
 
 {% endblock %}
