--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -2,8 +2,8 @@
 
 
 {% block ThemeHomepage %}
+<div class="main_container_slider container-max page-content"><!--Anfang des Containers-->
 
-  <div class="main_container_slider container-max page-content">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -32,29 +32,27 @@
     </div>
     <div class="main_pagecontent">
     </div>
-  </div>
-  </div>
 
-  <div class="container">
-  <div class="row">
-    <div class="col">
+    <div class="row">
+      <div class="col">
       1 of 2
-    </div>
-    <div class="col">
+      </div>
+      <div class="col">
       1 of 2
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1 of 3
+    <div class="row">
+      <div class="col">
+        1 of 3
+      </div>
+      <div class="col">
+        1 of 3
+      </div>
+      <div class="col">
+          1 of 3
+      </div>
     </div>
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-  </div>
-</div>
 
+
+</div><!--Ende des Containers-->
 {% endblock %}
