--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -30,9 +30,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <div class="main_pagecontent">
-    </div>
-    <div class="container">
+    <div class="container main_pagecontent">
       <div class="row">
         <div class="col-md-4">
           <div class="card" style="width: 20rem;">
