homepage styles hinzugefügt

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -31,6 +31,7 @@
       </a>
     </div>
     <div class="container main_pagecontent">
+      <h4>Kategorien</h4>
       <div class="row">
         <div class="col-md-4">
           <div class="card" style="width: 20rem;">
