Card Beispiel Texte hinzugefügt

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -37,9 +37,9 @@
           <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h4 class="card-title">Perlenparadies</h4>
+              <p class="card-text">Entdecke im Perlenpadadies unsere Auswahl an verschiedenen Perlen.</p>
+              <a href="#" class="btn btn-primary">Entdecken</a>
             </div>
           </div>
         </div>
@@ -47,9 +47,9 @@
           <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h4 class="card-title">Schmuckmaterial</h4>
+              <p class="card-text">Suchst du Anhänger, Bänder oder auch Verschlüsse? Hier findest du was du suchst!</p>
+              <a href="#" class="btn btn-primary">Entdecken</a>
             </div>
           </div>
         </div>
@@ -57,9 +57,9 @@
           <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h4 class="card-title">Basteln & Kreatives</h4>
+              <p class="card-text">Bastelst du gerne? Dann schau hier rein!</p>
+              <a href="#" class="btn btn-primary">Entdecken</a>
             </div>
           </div>
         </div>
