Card Design angepasst

--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -10,3 +10,15 @@
 .main_pagecontent{
   margin-top: 25px;
 }
+
+/*****Startseite Cards*****/
+.homepage_card{
+
+}
+.homepage_card-block{
+
+}
+.homepage_card_img{
+  height: 278px;
+  background-color: #e878aa;
+}
