--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -34,9 +34,9 @@
       <h4>Kategorien</h4>
       <div class="row">
         <div class="col-md-4">
-          <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-block">
+          <div class="homepage_card card" style="width: 20rem;">
+            <img class="homepage_card_img card-img-top" src="..." alt="Card image cap">
+            <div class="homepage_card-block card-block">
               <h4 class="card-title">Perlenparadies</h4>
               <p class="card-text">Entdecke im Perlenpadadies unsere Auswahl an verschiedenen Perlen.</p>
               <a href="#" class="btn btn-primary">Entdecken</a>
@@ -44,9 +44,9 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-block">
+          <div class="homepage_card card" style="width: 20rem;">
+            <img class="homepage_card_img card-img-top" src="..." alt="Card image cap">
+            <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckmaterial</h4>
               <p class="card-text">Suchst du Anhänger, Bänder oder auch Verschlüsse? Hier findest du was du suchst!</p>
               <a href="#" class="btn btn-primary">Entdecken</a>
@@ -54,9 +54,9 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-block">
+          <div class="homepage_card card" style="width: 20rem;">
+            <img class="homepage_card_img card-img-top" src="..." alt="Card image cap">
+            <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
               <p class="card-text">Bastelst du gerne? Dann schau hier rein!</p>
               <a href="#" class="btn btn-primary">Entdecken</a>
