--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -58,7 +58,7 @@
             <img class="homepage_card_img card-img-top" src="..." alt="Card image cap">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
-              <p class="card-text">Bastelst du gerne? Dann schau hier rein!</p>
+              <p class="card-text">Bastelst du gerne? Dann schau hier rein!</br></p>
               <a href="#" class="btn btn-primary">Entdecken</a>
             </div>
           </div>
