--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -31,6 +31,9 @@
       </a>
     </div>
     <div class="container main_pagecontent">
+      <div class="homepage_sale-row">
+        <p>Sale</p>
+      </div>
       <h4>Kategorien</h4>
       <div class="row">
         <div class="col-md-4">
