--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -32,7 +32,7 @@
     </div>
     <div class="container main_pagecontent">
       <div class="homepage_sale-row">
-        <p>Sale</p>
+        <a href="https://www.sadingo.de/sale">Sale</a>
       </div>
       <h4>Kategorien</h4>
       <div class="row">
