--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -34,11 +34,11 @@
       <div class="homepage_sale-row">
         <a href="https://www.sadingo.de/sale">Sale</a>
       </div>
-      <h4>Kategorien</h4>
+      <br/>
       <div class="row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Card image cap">
+            <img class="homepage_card_img card-img-top" src="..." alt="Perlenparadies">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Perlenparadies</h4>
               <p class="card-text">Entdecke im Perlenpadadies unsere Auswahl an verschiedenen Perlen.</p>
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Card image cap">
+            <img class="homepage_card_img card-img-top" src="..." alt="Schmuckmaterial">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckmaterial</h4>
               <p class="card-text">Suchst du Anhänger, Bänder oder auch Verschlüsse? Hier findest du was du suchst!</p>
@@ -58,7 +58,7 @@
         </div>
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Card image cap">
+            <img class="homepage_card_img card-img-top" src="..." alt="Basteln & Kreatives">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
               <p class="card-text">Bastelst du gerne? Dann schau hier rein!</br></p>
