--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -32,10 +32,10 @@
     </div>
     <div class="container main_pagecontent">
       <div class="homepage_sale-row">
-        <a href="https://www.sadingo.de/sale">Sale</a>
+        <a href="https://www.sadingo.de/sale">SALE</a>
       </div>
       <br/>
-      <div class="row">
+      <div class="homepage_row row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
             <img class="homepage_card_img card-img-top" src="..." alt="Perlenparadies">
