Links und Button Startseite

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -42,7 +42,7 @@
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Perlenparadies</h4>
               <p class="card-text">Entdecke im Perlenpadadies unsere Auswahl an verschiedenen Perlen.</p>
-              <a href="#" class="btn btn-primary">Entdecken</a>
+              <a href="/perlenparadies" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckmaterial</h4>
               <p class="card-text">Suchst du Anhänger, Bänder oder auch Verschlüsse? Hier findest du was du suchst!</p>
-              <a href="#" class="btn btn-primary">Entdecken</a>
+              <a href="/schmuckmaterial" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
               <p class="card-text">Bastelst du gerne? Dann schau hier rein!</br></p>
-              <a href="#" class="btn btn-primary">Entdecken</a>
+              <a href="/basteln-kreatives" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
         </div>
