--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -34,7 +34,6 @@
       <div class="homepage_sale-row">
         <a href="https://www.sadingo.de/sale">SALE</a>
       </div>
-      <br/>
       <div class="homepage_row row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
@@ -61,7 +60,7 @@
             <img class="homepage_card_img card-img-top" src="..." alt="Basteln & Kreatives">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
-              <p class="card-text">Bastelst du gerne? Dann schau hier rein!</br></p>
+              <p class="card-text">Bastelst du gerne? Dann schau hier rein!</p></br>
               <a href="/basteln-kreatives" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
