--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -131,7 +131,7 @@ a {
 
 /***** Footer *****/
 .footer {
-   background-color: #555860;
+   background-color: #fd98bb;
 }
   .footer a {
    color: #fff !important;
