footer Anpassungen Content breite

--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -1,5 +1,5 @@
 <div class="footer">
-<div class="main_container_slider container-max page-content">
+<div class="main_container_footer container-max page-content">
   <div class="row">
     <div class="col">col</div>
     <div class="col">col</div>
