Footer Css Datei hinzugefügt

--- a/resources/views/CeresSadingo.twig
+++ b/resources/views/CeresSadingo.twig
@@ -3,3 +3,4 @@
 <!-- Eigenes Design -->
 <link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/main.css">
 <link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/homepage.css">
+<link rel="stylesheet" href="{{ plugin_path('CeresSadingo') }}/css/footer.css">
