--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -66,6 +66,38 @@
           </div>
         </div>
       </div>
+      <div class="homepage_row row">
+        <div class="col-md-4">
+          <div class="homepage_card card" style="width: 20rem;">
+            <img class="homepage_card_img card-img-top" src="..." alt="Perlenparadies">
+            <div class="homepage_card-block card-block">
+              <h4 class="card-title">Schmuckstücke</h4>
+              <p class="card-text">Hier findest du einige Schmuckstücke.</p>
+              <a href="/schmuckstuecke" class="btn btn-outline-primary">Entdecken</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="homepage_card card" style="width: 20rem;">
+            <img class="homepage_card_img card-img-top" src="..." alt="Schmuckmaterial">
+            <div class="homepage_card-block card-block">
+              <h4 class="card-title">Specials</h4>
+              <p class="card-text">Unsere Specials kannst du dir hier angucken!</p>
+              <a href="/specials" class="btn btn-outline-primary">Entdecken</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="homepage_card card" style="width: 20rem;">
+            <img class="homepage_card_img card-img-top" src="..." alt="Basteln & Kreatives">
+            <div class="homepage_card-block card-block">
+              <h4 class="card-title">Neue Artikel</h4>
+              <p class="card-text">Guck dir mal unsere neuen Artikel hier im Shop an!</p></br>
+              <a href="/neue-artikel" class="btn btn-outline-primary">Entdecken</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
 </div><!--Ende des Containers-->
