--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -1,10 +1,10 @@
 <div class="footer">
 <div class="main_container_footer container-max">
   <div class="row">
-    <div class="col">col</div>
-    <div class="col">col</div>
-    <div class="col">col</div>
-    <div class="col">col</div>
+    <div class="col-md-4">col</div>
+    <div class="col-md-4">col</div>
+    <div class="col-md-4">col</div>
+    <div class="col-md-4">col</div>
   </div>
 <div>
     <!-- Insert footer markup here -->
