--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -72,7 +72,7 @@
             <img class="homepage_card_img card-img-top" src="..." alt="Perlenparadies">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckstücke</h4>
-              <p class="card-text">Hier findest du einige Schmuckstücke.</p>
+              <p class="card-text">Hier findest du einige Schmuckstücke.</p></br>
               <a href="/schmuckstuecke" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
@@ -82,7 +82,7 @@
             <img class="homepage_card_img card-img-top" src="..." alt="Schmuckmaterial">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Specials</h4>
-              <p class="card-text">Unsere Specials kannst du dir hier angucken!</p>
+              <p class="card-text">Unsere Specials kannst du dir hier angucken!</p></br>
               <a href="/specials" class="btn btn-outline-primary">Entdecken</a>
             </div>
           </div>
