Social Media hinzugefügt

--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -1,33 +1,30 @@
 <div class="footer">
-<div class="main_container_footer container-max">
-  <div class="row">
-    <div class="col-md-3">
-      <h3>Sadingo Infos</h3>
-      <a href="https://www.sadingo.de/webshop/kontakt/">Kontakt</a>
-      <a href="https://www.sadingo.de/webshop/datenschutz/">Datenschutzerklärung</a>
-      <a href="https://www.sadingo.de/webshop/agb/">AGB</a>
-      <a href="https://www.sadingo.de/webshop/impressum/">Impressum</a>
+  <div class="main_container_footer container-max">
+    <div class="row">
+      <div class="col-md-3">
+        <h3>Sadingo Infos</h3>
+        <a href="https://www.sadingo.de/webshop/kontakt/">Kontakt</a>
+        <a href="https://www.sadingo.de/webshop/datenschutz/">Datenschutzerklärung</a>
+        <a href="https://www.sadingo.de/webshop/agb/">AGB</a>
+        <a href="https://www.sadingo.de/webshop/impressum/">Impressum</a>
+      </div>
+      <div class="col-md-3">
+        <h3>Social Media</h3>
+        <a href="https://www.facebook.com/sadingoShopping"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_facebook.png" alt="Sadingo Facebook" height="40" width="40"></a>
+        <a href="https://www.instagram.com/sadingoshopping/"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_instagram.png" alt="Sadingo Instagram" height="40" width="40"></a>
+      </div>
+      <div class="col-md-3">
+        <h3>Unser Blog</h3>
+        <a href="http://blog.sadingo.de/">Blog</a>
+        <a href="http://blog.sadingo.de/bastelvideos/">Bastelvideos</a>
+      </div>
+      <div class="col-md-3">
+        <h3>Einkauf</h3>
+        <a href="https://www.sadingo.de/webshop/zahlungsarten/">Zahlungsarten</a>
+        <a href="https://www.sadingo.de/webshop/versandinformationen/">Versandarten & -kosten</a>
+        <a href="https://www.sadingo.de/webshop/widerrufsrecht/">Widerrufsrecht</a>
+        <a href="https://www.sadingo.de/webshop/hilfe/">Hilfe</a>
+      </div>
     </div>
-    <div class="col-md-3">
-      <h3>Social Media</h3>
-      <a href=""></a>
-      <a href=""></a>
-    </div>
-    <div class="col-md-3">
-      <h3>Unser Blog</h3>
-      <a href="http://blog.sadingo.de/">Blog</a>
-      <a href="http://blog.sadingo.de/bastelvideos/">Bastelvideos</a>
-    </div>
-    <div class="col-md-3">
-      <h3>Einkauf</h3>
-      <a href="https://www.sadingo.de/webshop/zahlungsarten/">Zahlungsarten</a>
-      <a href="https://www.sadingo.de/webshop/versandinformationen/">Versandarten & -kosten</a>
-      <a href="https://www.sadingo.de/webshop/widerrufsrecht/">Widerrufsrecht</a>
-      <a href="https://www.sadingo.de/webshop/hilfe/">Hilfe</a>
-    </div>
-  </div>
-<div>
-    <!-- Insert footer markup here -->
-    <p>hier entsteht der neue Sadingo footer</p>
-
+  <div>
 </div>
