Listen Elemente hinzugefügt

--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -3,27 +3,35 @@
     <div class="row">
       <div class="col-md-3">
         <h3>Sadingo Infos</h3>
-        <a href="https://www.sadingo.de/webshop/kontakt/">Kontakt</a>
-        <a href="https://www.sadingo.de/webshop/datenschutz/">Datenschutzerklärung</a>
-        <a href="https://www.sadingo.de/webshop/agb/">AGB</a>
-        <a href="https://www.sadingo.de/webshop/impressum/">Impressum</a>
+        <ul>
+          <li><a href="https://www.sadingo.de/webshop/kontakt/">Kontakt</a></li>
+          <li><a href="https://www.sadingo.de/webshop/datenschutz/">Datenschutzerklärung</a></li>
+          <li><a href="https://www.sadingo.de/webshop/agb/">AGB</a></li>
+          <li><a href="https://www.sadingo.de/webshop/impressum/">Impressum</a></li>
+        </ul>
       </div>
       <div class="col-md-3">
         <h3>Social Media</h3>
-        <a href="https://www.facebook.com/sadingoShopping"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_facebook.png" alt="Sadingo Facebook" height="40" width="40"></a>
-        <a href="https://www.instagram.com/sadingoshopping/"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_instagram.png" alt="Sadingo Instagram" height="40" width="40"></a>
+        <ul>
+          <li><a href="https://www.facebook.com/sadingoShopping"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_facebook.png" alt="Sadingo Facebook" height="40" width="40"></a></li>
+          <li><a href="https://www.instagram.com/sadingoshopping/"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_instagram.png" alt="Sadingo Instagram" height="40" width="40"></a></li>
+        </ul>
       </div>
       <div class="col-md-3">
         <h3>Unser Blog</h3>
-        <a href="http://blog.sadingo.de/">Blog</a>
-        <a href="http://blog.sadingo.de/bastelvideos/">Bastelvideos</a>
+        <ul>
+          <li><a href="http://blog.sadingo.de/">Blog</a></li>
+          <li><a href="http://blog.sadingo.de/bastelvideos/">Bastelvideos</a></li>
+        </ul>
       </div>
       <div class="col-md-3">
         <h3>Einkauf</h3>
-        <a href="https://www.sadingo.de/webshop/zahlungsarten/">Zahlungsarten</a>
-        <a href="https://www.sadingo.de/webshop/versandinformationen/">Versandarten & -kosten</a>
-        <a href="https://www.sadingo.de/webshop/widerrufsrecht/">Widerrufsrecht</a>
-        <a href="https://www.sadingo.de/webshop/hilfe/">Hilfe</a>
+        <ul>
+          <li><a href="https://www.sadingo.de/webshop/zahlungsarten/">Zahlungsarten</a></li>
+          <li><a href="https://www.sadingo.de/webshop/versandinformationen/">Versandarten & -kosten</a></li>
+          <li><a href="https://www.sadingo.de/webshop/widerrufsrecht/">Widerrufsrecht</a></li>
+          <li><a href="https://www.sadingo.de/webshop/hilfe/">Hilfe</a></li>
+        </ul>
       </div>
     </div>
   <div>
