--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -10,4 +10,12 @@
 }
 .main_container_footer {
   padding: 25px 15px 25px 15px;
+  color: #fff;
 }
+  .main_container_footer h4 {
+    color: #fff;
+  }
+  .main_container_footer ul {
+    list-style: none;
+    padding: 0;
+  }
