--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -34,5 +34,6 @@
         </ul>
       </div>
     </div>
-  <div>
+  </div>
+  <div class="copyright-bar"> © Copyright 2017 Sadingo. Alle Rechte vorbehalten. </div>
 </div>
