Höhe der Social Links

--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -14,7 +14,7 @@
         <h4>Social Media</h4>
         <ul>
           <li><a href="https://www.facebook.com/sadingoShopping"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_facebook.png" alt="Sadingo Facebook" height="40" width="40"></a></li>
-          <li><a href="https://www.instagram.com/sadingoshopping/"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_instagram.png" alt="Sadingo Instagram" height="40" width="40"></a></li>
+          <li style="margin-top: 8px;"><a href="https://www.instagram.com/sadingoshopping/"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_instagram.png" alt="Sadingo Instagram" height="40" width="40"></a></li>
         </ul>
       </div>
       <div class="col-md-3">
