--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -37,7 +37,7 @@
       <div class="homepage_row row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Perlenparadies">
+            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/perlenparadies.png" alt="Perlenparadies">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Perlenparadies</h4>
               <p class="card-text">Entdecke im Perlenpadadies unsere Auswahl an verschiedenen Perlen.</p>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Schmuckmaterial">
+            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckmaterial.png" alt="Schmuckmaterial">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckmaterial</h4>
               <p class="card-text">Suchst du Anhänger, Bänder oder auch Verschlüsse? Hier findest du was du suchst!</p>
