Weitere Bilder hinzugefügt

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Basteln & Kreatives">
+            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/bastelnkreatives.png" alt="Basteln & Kreatives">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Basteln & Kreatives</h4>
               <p class="card-text">Bastelst du gerne? Dann schau hier rein!</p></br>
