Startseite Bild schmuckstuecke

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -69,7 +69,7 @@
       <div class="homepage_row row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="..." alt="Perlenparadies">
+            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckstuecke.png" alt="Perlenparadies">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckstücke</h4>
               <p class="card-text">Hier findest du einige Schmuckstücke.</p></br>
