--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -35,6 +35,13 @@
         <a href="https://www.sadingo.de/sale">SALE</a>
       </div>
       <div class="homepage_row row">
+        <h2>Willkommen bei Sadingo<h2>
+        <p>
+          Hier bei Sadingo findest du Hochwertiges Schmuck- und Bastelmaterial, Holzperlen, Glasperlen, Metallperlen, Holzknöpfe, Bänder und
+          Lederartikel sowie Bastelzubehör und noch weitere Artikel, welche dir gefallen könnten!
+        </p>
+      </div>
+      <div class="homepage_row row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
             <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/perlenparadies.png" alt="Perlenparadies">
@@ -69,7 +76,7 @@
       <div class="homepage_row row">
         <div class="col-md-4">
           <div class="homepage_card card" style="width: 20rem;">
-            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckstuecke.png" alt="Perlenparadies">
+            <img class="homepage_card_img card-img-top" src="https://www.sadingo.de/images/gallery/Startseite/schmuckstuecke.png" alt="Schmuckstücke">
             <div class="homepage_card-block card-block">
               <h4 class="card-title">Schmuckstücke</h4>
               <p class="card-text">Hier findest du einige Schmuckstücke.</p></br>
