--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -35,7 +35,7 @@
         <a href="https://www.sadingo.de/sale">SALE</a>
       </div>
       <div class="homepage_row row">
-        <h2>Willkommen bei Sadingo<h2>
+        <h3>Willkommen bei Sadingo</h3>
         <p>
           Hier bei Sadingo findest du Hochwertiges Schmuck- und Bastelmaterial, Holzperlen, Glasperlen, Metallperlen, Holzknöpfe, Bänder und
           Lederartikel sowie Bastelzubehör und noch weitere Artikel, welche dir gefallen könnten!
