Links im Footer angepasst

--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -4,10 +4,10 @@
       <div class="col-md-3">
         <h4>Sadingo Infos</h4>
         <ul>
-          <li><a href="https://www.sadingo.de/webshop/kontakt/">Kontakt</a></li>
-          <li><a href="https://www.sadingo.de/webshop/datenschutz/">Datenschutzerklärung</a></li>
-          <li><a href="https://www.sadingo.de/webshop/agb/">AGB</a></li>
-          <li><a href="https://www.sadingo.de/webshop/impressum/">Impressum</a></li>
+          <li><a href="https://www.sadingo.de/kontakt/">Kontakt</a></li>
+          <li><a href="https://www.sadingo.de/datenschutz/">Datenschutzerklärung</a></li>
+          <li><a href="https://www.sadingo.de/agb/">AGB</a></li>
+          <li><a href="https://www.sadingo.de/impressum/">Impressum</a></li>
         </ul>
       </div>
       <div class="col-md-3">
@@ -27,10 +27,10 @@
       <div class="col-md-3">
         <h4>Einkauf</h4>
         <ul>
-          <li><a href="https://www.sadingo.de/webshop/zahlungsarten/">Zahlungsarten</a></li>
-          <li><a href="https://www.sadingo.de/webshop/versandinformationen/">Versandarten & -kosten</a></li>
-          <li><a href="https://www.sadingo.de/webshop/widerrufsrecht/">Widerrufsrecht</a></li>
-          <li><a href="https://www.sadingo.de/webshop/hilfe/">Hilfe</a></li>
+          <li><a href="https://www.sadingo.de/zahlungsarten/">Zahlungsarten</a></li>
+          <li><a href="https://www.sadingo.de/versandinformationen/">Versandarten & -kosten</a></li>
+          <li><a href="https://www.sadingo.de/widerrufsrecht/">Widerrufsrecht</a></li>
+          <li><a href="https://www.sadingo.de/hilfe/">Hilfe</a></li>
         </ul>
       </div>
     </div>
