--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -20,6 +20,7 @@
     font-size: 34px;
     color: #FFF !important;
     font-weight: bold;
+    display: block;
   }
   /*****Rows*****/
 .homepage_row {
