Design Anpassung Farbe Footer/TopBar

--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -1,6 +1,6 @@
 /***** Footer *****/
 .footer {
-   background-color: #fd98bb;
+   background-color: rgb(51,51,51);
 }
   .footer a {
    color: #fff !important;
