--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -34,7 +34,7 @@
       <div class="homepage_sale-row">
         <a href="https://www.sadingo.de/sale">SALE</a>
       </div>
-      <div class="homepage_row row">
+      <div class="homepage_row">
         <h3>Willkommen bei Sadingo</h3>
         <p>
           Hier bei Sadingo findest du Hochwertiges Schmuck- und Bastelmaterial, Holzperlen, Glasperlen, Metallperlen, Holzknöpfe, Bänder und
