--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -16,18 +16,18 @@ a {
   color: #fff !important;
 }
 .top-bar {
-  background-color: #555860;
+  background-color: rgb(51, 51, 51);
 }
 .top-bar .controls-list .control-basket .toggle-basket-preview {
   background: #FD98BB !important;
   border-bottom: solid 1px;
   padding-bottom: 6px;
 }
-.controls-list a:hover{
+.controls-list a:hover {
   background: #FD98BB !important;
 }
 /***** Menü Leiste (oben) *****/
-.wrapper-main>nav.container-max{
+.wrapper-main>nav.container-max {
   background-color: #fff !important;
 }
 .breadcrumb a {
