--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -21,3 +21,9 @@
   text-align: center;
   padding-bottom: 15px;
 }
+.footer_social i {
+    color: #8b8b8b;
+    font-size: 20px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
