--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-md-3">
         <h4>Sadingo Infos</h4>
+        </br>
         <ul>
           <li><a href="https://www.sadingo.de/kontakt/">Kontakt</a></li>
           <li><a href="https://www.sadingo.de/datenschutz/">Datenschutzerklärung</a></li>
@@ -12,13 +13,15 @@
       </div>
       <div class="col-md-3">
         <h4>Social Media</h4>
-        <ul>
-          <li><a href="https://www.facebook.com/sadingoShopping"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_facebook.png" alt="Sadingo Facebook" height="40" width="40"></a></li>
-          <li style="margin-top: 8px;"><a href="https://www.instagram.com/sadingoshopping/"><img src="https://www.sadingo.de/images/gallery/Template Vorlagen/default_instagram.png" alt="Sadingo Instagram" height="40" width="40"></a></li>
+        </br>
+        <ul class:"footer_social">
+          <li><a href="https://www.facebook.com/sadingoShopping"><i class="fa fa-facebook-official" aria-hidden="true"></i><br>Facebook</a></li>
+          <li><a href="https://www.instagram.com/sadingoshopping/"><i class="fa fa-instagram" aria-hidden="true"></i><br>Instagram</a></li>
         </ul>
       </div>
       <div class="col-md-3">
         <h4>Unser Blog</h4>
+        </br>
         <ul>
           <li><a href="http://blog.sadingo.de/">Blog</a></li>
           <li><a href="http://blog.sadingo.de/bastelvideos/">Bastelvideos</a></li>
@@ -26,6 +29,7 @@
       </div>
       <div class="col-md-3">
         <h4>Einkauf</h4>
+        </br>
         <ul>
           <li><a href="https://www.sadingo.de/zahlungsarten/">Zahlungsarten</a></li>
           <li><a href="https://www.sadingo.de/versandinformationen/">Versandarten & -kosten</a></li>
