Footer Social Icon br entfernt

--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -15,8 +15,8 @@
         <h4>Social Media</h4>
         </br>
         <ul class:"footer_social">
-          <li><a href="https://www.facebook.com/sadingoShopping"><i class="fa fa-facebook-official" aria-hidden="true"></i><br>Facebook</a></li>
-          <li><a href="https://www.instagram.com/sadingoshopping/"><i class="fa fa-instagram" aria-hidden="true"></i><br>Instagram</a></li>
+          <li><a href="https://www.facebook.com/sadingoShopping"><i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</a></li>
+          <li><a href="https://www.instagram.com/sadingoshopping/"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
         </ul>
       </div>
       <div class="col-md-3">
