--- a/resources/views/content/Footer.twig
+++ b/resources/views/content/Footer.twig
@@ -14,7 +14,7 @@
       <div class="col-md-3">
         <h4>Social Media</h4>
         </br>
-        <ul class:"footer_social">
+        <ul class="footer_social">
           <li><a href="https://www.facebook.com/sadingoShopping"><i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</a></li>
           <li><a href="https://www.instagram.com/sadingoshopping/"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
         </ul>
