--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -24,7 +24,17 @@ a {
   padding-bottom: 6px;
 }
 .controls-list a:hover {
-  background: #FD98BB !important;
+  background: rgb(51, 51, 51); !important;
+}
+.control-user {
+  border-left: 1px solid;
+  border-right: 1px solid;
+}
+.control-user a:first-child{
+  border-right: 1px solid;
+}
+.control-user .pipe {
+  display: none;
 }
 /***** Menü Leiste (oben) *****/
 .wrapper-main>nav.container-max {
