Top Hover geändert

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -24,7 +24,7 @@ a {
   padding-bottom: 6px;
 }
 .controls-list a:hover {
-  background: rgb(51, 51, 51); !important;
+  background: rgb(51, 51, 51) !important;
 }
 .control-user {
   border-left: 1px solid;
